[gd_scene load_steps=5 format=3 uid="uid://dubaka086frrj"]

[ext_resource type="Script" path="res://Player.gd" id="1_qm1p0"]
[ext_resource type="PackedScene" uid="uid://bnlq34geuxnms" path="res://character_body_2d.tscn" id="2_nri55"]
[ext_resource type="Texture2D" uid="uid://f2stwt72emrs" path="res://player_sprites/Warlord/player_arm.png" id="2_t40xa"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m2yb6"]
size = Vector2(405, 288)

[node name="Player" type="Area2D"]
script = ExtResource("1_qm1p0")

[node name="arm_right" type="Sprite2D" parent="."]
position = Vector2(-61, 66)
texture = ExtResource("2_t40xa")
offset = Vector2(50, 4)

[node name="player_skeleton" parent="." instance=ExtResource("2_nri55")]

[node name="arm_left" type="Sprite2D" parent="."]
position = Vector2(61, 66)
texture = ExtResource("2_t40xa")
offset = Vector2(50, 4)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, 64)
rotation = -1.5708
shape = SubResource("RectangleShape2D_m2yb6")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
